Fix scrolling problem on iOS safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 /* Import fonts */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic);
 
 thead {
     font-weight: bold;
@@ -226,7 +226,6 @@ ul.sidebar-menu li.active a i {
     margin-left: 200px;
     line-height: 1.8;
     font-size: 19px;
-    -webkit-transform: translate3d(0,0,0);
 }
 
 .header {
